k8s/local/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sportbook
  name: sportbook
spec:
  selector:
    matchLabels:
      app: sportbook
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sportbook
    spec:
      dnsPolicy: ClusterFirst
      dnsConfig:
        nameservers:
          - 8.8.8.8
          - 8.8.4.4
      containers:
        - name: app
          workingDir: /usr/src/app/
          args:
            - /bin/sh
            - -c
            - npm install && npm run dev
          image: node:22-alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: code
              mountPath: /usr/src/app/
      volumes:
        - name: code
          persistentVolumeClaim:
            claimName: sportbook-code
