k8s/local/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sportbook
  name: sportbook
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: sportbook
  type: ClusterIP
